### Changed - 券種検索viewをオファー検索viewに統合

--- a/views/offers/index.ejs
+++ b/views/offers/index.ejs
@@ -21,178 +21,8 @@ OF-01
             <a class="btn btn-primary search btn-ok" href="#">
                 <i class="material-icons">refresh</i>更新</a>
         </div>
-        <div class="material-datatables">
-            <div id="datatables_wrapper" class="dataTables_wrapper dt-bootstrap4">
-                <div class="row">
-                    <div class="col-sm-12">
-                        <form method="post">
-                            <% /* 共通Hiddenコントロール */ %>
-                            <%- include('../common/master/_hidden') %>
 
-                            <div class="form-row">
-                                <div class="form-group bmd-form-group col-md-2">
-                                    <label for="itemOffered[typeOf]" class="bmd-label-static">
-                                        アイテム
-                                    </label>
-                                    <select class="form-control" name="itemOffered[typeOf]">
-                                        <option value="">---</option>
-                                        <% productTypes.forEach((productType) => { %>
-                                        <option value="<%= productType.codeValue %>"><%= productType.name %></option>
-                                        <% }) %>
-                                    </select>
-                                </div>
-
-                                <div class="form-group bmd-form-group col-md-2">
-                                    <label for="identifier" class="bmd-label-static">
-                                        コード
-                                    </label>
-                                    <input type="text" class="form-control" name="identifier" id="identifier"
-                                        placeholder="" maxlength=64>
-                                </div>
-
-                                <div class="form-group bmd-form-group col-md-2">
-                                    <label for="name" class="bmd-label-static">
-                                        名称
-                                    </label>
-                                    <input type="text" class="form-control" name="name" id="name" placeholder=""
-                                        maxlength=64>
-                                </div>
-                                <div class="form-group bmd-form-group col-md-2">
-                                    <label for="category[codeValue]" class="bmd-label-static">
-                                        カテゴリー
-                                    </label>
-                                    <select class="form-control" name="category[codeValue]">
-                                        <option value="">---</option>
-                                        <% ticketTypeCategories.forEach((category) => { %>
-                                        <option value="<%= category.codeValue %>">
-                                            <%= category.name.ja %>
-                                        </option>
-                                        <% }) %>
-                                    </select>
-                                </div>
-
-                                <div class="form-group bmd-form-group col-md-4">
-                                    <label for="" class="bmd-label-static">
-                                        単価
-                                    </label>
-                                    <div class="input-group">
-                                        <select class="form-control"
-                                            name="priceSpecification[referenceQuantity][value]">
-                                            <option value="">---</option>
-                                            <% for (let i = 1; i <= 10; i++) { %>
-                                            <option value="<%= i %>">
-                                                <%= i %>
-                                            </option>
-                                            <% } %>
-                                        </select>
-
-                                        <div class="input-group-append">
-                                            <span class="input-group-text">枚あたり</span>
-                                        </div>
-
-                                        <input class="form-control" placeholder="" maxlength=10
-                                            name="priceSpecification[minPrice]" id="priceSpecification[minPrice]"
-                                            value="" />
-
-                                        <div class="input-group-append">
-                                            <span class="input-group-text">円以上</span>
-                                        </div>
-
-                                        <input class="form-control" placeholder="" maxlength=10
-                                            name="priceSpecification[maxPrice]" id="priceSpecification[maxPrice]"
-                                            value="" />
-
-                                        <div class="input-group-append">
-                                            <span class="input-group-text">円以下</span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-                <div id="list" style="display:none;" class="row">
-                    <div class="col-sm-12 table-responsive">
-                        <table id="datatables" class="table table-no-bordered table-hover dataTable dtr-inline"
-                            cellspacing="0" width="100%" style="width: 100%;" role="grid"
-                            aria-describedby="datatables_info">
-                            <thead class="text-primary">
-                                <tr>
-                                    <th>コード</th>
-                                    <th>利用状況</th>
-                                    <th>アイテム</th>
-                                    <th>カテゴリー</th>
-                                    <th>名称</th>
-                                    <th>発生金額</th>
-                                    <th>売上金額</th>
-                                    <th>有効性</th>
-                                    <th>アドオン</th>
-                                    <th>カタログ</th>
-                                    <th>追加特性</th>
-                                </tr>
-                            </thead>
-
-                            <tbody>
-                                <tr id="templateRow" _id="$id$">
-                                    <td name="id__identifier">
-                                        <a target="_blank" href="/offers/$id$/update">
-                                            $identifier$
-                                            <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
-                                        </a>
-                                    </td>
-                                    <td name="availability">
-                                        <span class="text-muted">$availability$</span>
-                                    </td>
-                                    <td name="itemOfferedName">$itemOfferedName$</td>
-                                    <td name="categoryName">$categoryName$</td>
-                                    <td name="name.ja|slice">$name.ja$</td>
-                                    <td
-                                        name="priceSpecification.price__priceSpecification.priceCurrency__priceSpecification.referenceQuantity.value__priceSpecification.referenceQuantity.unitCode">
-                                        $priceSpecification.price$ $priceSpecification.priceCurrency$ /
-                                        $priceSpecification.referenceQuantity.value$
-                                        $priceSpecification.referenceQuantity.unitCode$
-                                    </td>
-                                    <td name="priceSpecification.accounting.accountsReceivable">
-                                        $priceSpecification.accounting.accountsReceivable$</td>
-                                    <td
-                                        name="validFrom|date:YY-MM-DD HH:mm:ss__validThrough|date:YY-MM-DD HH:mm:ss__validRateLimitStr">
-                                        $validFrom$ ~ $validThrough$<br>
-                                        $validRateLimitStr$
-                                    </td>
-                                    </td>
-                                    <td name="id__addOnCount">
-                                        <a href="javascript:void(0)" class="showAddOn" data-id="$id$">
-                                            <span>$addOnCount$</span>
-                                        </a>
-                                    </td>
-                                    <td name="id__showCatalogs">
-                                        <a href="javascript:void(0)" class="showCatalogs" data-id="$id$">
-                                            <span>表示</span>
-                                        </a>
-                                    </td>
-                                    <td name="id__additionalProperty">
-                                        <a href="javascript:void(0)" class="showAdditionalProperty" data-id="$id$">
-                                            <span>表示</span>
-                                        </a>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-12 col-md-5">
-                        <div class="dataTables_info" id="datatables_info" role="status" aria-live="polite">
-                        </div>
-                    </div>
-                    <div class="col-sm-12 col-md-7">
-                        <div class="dataTables_paginate paging_full_numbers" id="datatables_paginate">
-                        </div>
-                        <div id="pager" class="div_pager_parent float-right"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <%- include('./_dataTables', { onlyEventService: false }) %>
     </div>
 
     <div class="modal fade" id="modal-offer" tabindex="-1">
