### Changed - 券種検索viewをオファー検索viewに統合

--- a/views/layouts/side.ejs
+++ b/views/layouts/side.ejs
@@ -103,10 +103,10 @@
             </a>
             <div class="collapse<% if (offersShow) { %> show<% } %>" id="offers">
                 <ul class="nav">
-                    <li class="nav-item <%= (displayId === 'Aa-6') ? 'active': ''; %>">
-                        <a class="nav-link" href="/ticketTypes">
+                    <li class="nav-item <%= (displayId === 'OF-01') ? 'active': ''; %>">
+                        <a class="nav-link" href="/offers">
                             <span class="sidebar-mini"><i class="material-icons">local_offer</i></span>
-                            <span class="sidebar-normal">券種</span>
+                            <span class="sidebar-normal">オファー(券種)</span>
                         </a>
                     </li>
                     <li class="nav-item <%= (displayId === 'OC-01') ? 'active': ''; %>">
@@ -115,14 +115,6 @@
                             <span class="sidebar-normal">カタログ(券種グループ)</span>
                         </a>
                     </li>
-                    <% if (process.env.USE_OFFER_ADD_ON === '1') { %>
-                    <li class="nav-item <%= (displayId === 'OF-01') ? 'active': ''; %>">
-                        <a class="nav-link" href="/offers">
-                            <span class="sidebar-mini"><i class="material-icons">local_offer</i></span>
-                            <span class="sidebar-normal">オファー <span class="badge badge-secondary">Preview</span></span>
-                        </a>
-                    </li>
-                    <% } %>
                 </ul>
             </div>
         </li>
