--- a/views/ticketType/add.ejs
+++ b/views/ticketType/add.ejs
@@ -1,7 +1,7 @@
 <%- contentFor('title') %>
-券種作成
+オファー作成
 <%- contentFor('displayId') %>
-Aa-5
+OF-3
 <%- contentFor('styles') %>
 <link href="/css/bootstrap.colorpickersliders.css" rel="stylesheet">
 <%- contentFor('scripts') %>
