--- a/views/ticketType/update.ejs
+++ b/views/ticketType/update.ejs
@@ -1,7 +1,7 @@
 <%- contentFor('title') %>
-券種編集
+オファー編集
 <%- contentFor('displayId') %>
-Aa-5
+OF-4
 <%- contentFor('styles') %>
 <link href="/css/bootstrap.colorpickersliders.css" rel="stylesheet">
 <%- contentFor('scripts') %>
