--- a/views/categoryCodes/form.ejs
+++ b/views/categoryCodes/form.ejs
@@ -15,42 +15,12 @@
             <% } %>
             <select class="form-control" name="inCodeSet[identifier]" <% if (!isNew) { %> disabled<% } %>>
                 <option value="">選択してください</option>
-                <option value="<%= CategorySetIdentifier.ServiceType %>" <% if (forms.inCodeSet !== undefined
-                    && forms.inCodeSet.identifier === CategorySetIdentifier.ServiceType) { %> selected<% } %>>
-                    興行区分
+                <% categoryCodeSets.forEach((categoryCodeSet) => { %>
+                <option value="<%= categoryCodeSet.identifier %>" <% if (forms.inCodeSet !== undefined
+                    && forms.inCodeSet.identifier === categoryCodeSet.identifier) { %> selected<% } %>>
+                    <%= categoryCodeSet.name %>
                 </option>
-                <option value="<%= CategorySetIdentifier.DistributorType %>" <% if (forms.inCodeSet !== undefined
-                    && forms.inCodeSet.identifier === CategorySetIdentifier.DistributorType) { %> selected<% } %>>
-                    配給区分
-                </option>
-                <option value="<%= CategorySetIdentifier.ContentRatingType %>" <% if (forms.inCodeSet !== undefined
-                    && forms.inCodeSet.identifier === CategorySetIdentifier.ContentRatingType) { %> selected<% } %>>
-                    レイティング区分
-                </option>
-                <option value="<%= CategorySetIdentifier.OfferCategoryType %>" <% if (forms.inCodeSet !== undefined
-                    && forms.inCodeSet.identifier === CategorySetIdentifier.OfferCategoryType) { %> selected<% } %>>
-                    オファーカテゴリー
-                </option>
-                <option value="<%= CategorySetIdentifier.VideoFormatType %>" <% if (forms.inCodeSet !== undefined
-                    && forms.inCodeSet.identifier === CategorySetIdentifier.VideoFormatType) { %> selected<% } %>>
-                    上映方式タイプ
-                </option>
-                <option value="<%= CategorySetIdentifier.SoundFormatType %>" <% if (forms.inCodeSet !== undefined
-                    && forms.inCodeSet.identifier === CategorySetIdentifier.SoundFormatType) { %> selected<% } %>>
-                    音響方式タイプ
-                </option>
-                <option value="<%= CategorySetIdentifier.SeatingType %>" <% if (forms.inCodeSet !== undefined
-                    && forms.inCodeSet.identifier === CategorySetIdentifier.SeatingType) { %> selected<% } %>>
-                    座席タイプ
-                </option>
-                <option value="<%= CategorySetIdentifier.MovieTicketType %>" <% if (forms.inCodeSet !== undefined
-                    && forms.inCodeSet.identifier === CategorySetIdentifier.MovieTicketType) { %> selected<% } %>>
-                    ムビチケ券種区分
-                </option>
-                <option value="<%= CategorySetIdentifier.AccountType%>" <% if (forms.inCodeSet !== undefined
-                    && forms.inCodeSet.identifier === CategorySetIdentifier.AccountType) { %> selected<% } %>>
-                    口座タイプ
-                </option>
+                <% }) %>
             </select>
             <span class="bmd-help text-danger d-block">
                 <% if (errors && errors['inCodeSet.identifier']) { %>
@@ -61,7 +31,7 @@
 
         <div class="form-group bmd-form-group">
             <label for="codeValue" class="bmd-label-static">
-                区分コード<span class="text-danger">＊</span>
+                コード<span class="text-danger">＊</span>
             </label>
             <% if (!isNew) { %>
             <input type="hidden" name="codeValue" value="<%= forms.codeValue %>">
