--- a/views/serviceTypes/form.ejs
+++ b/views/serviceTypes/form.ejs
@@ -8,7 +8,7 @@
     <div class="card-body">
         <div class="form-group bmd-form-group">
             <label for="codeValue" class="bmd-label-static">
-                区分コード<span class="text-danger">＊</span>
+                コード<span class="text-danger">＊</span>
             </label>
 
             <% if (isNew) { %>
