--- a/views/categoryCodes/index.ejs
+++ b/views/categoryCodes/index.ejs
@@ -34,34 +34,11 @@ CC-00
                                         分類
                                     </label>
                                     <select class="form-control" name="inCodeSet[identifier]">
-                                        <option value="" selected>未選択</option>
-                                        <option value="<%= CategorySetIdentifier.ServiceType%>">
-                                            サービス区分
+                                        <option value="">---</option>
+                                        <% categoryCodeSets.forEach((categoryCodeSet) => { %>
+                                        <option value="<%= categoryCodeSet.identifier %>"><%= categoryCodeSet.name %>
                                         </option>
-                                        <option value="<%= CategorySetIdentifier.DistributorType%>">
-                                            配給区分
-                                        </option>
-                                        <option value="<%= CategorySetIdentifier.ContentRatingType%>">
-                                            レイティング区分
-                                        </option>
-                                        <option value="<%= CategorySetIdentifier.OfferCategoryType%>">
-                                            オファーカテゴリー
-                                        </option>
-                                        <option value="<%= CategorySetIdentifier.VideoFormatType%>">
-                                            上映方式タイプ
-                                        </option>
-                                        <option value="<%= CategorySetIdentifier.SoundFormatType%>">
-                                            音響方式タイプ
-                                        </option>
-                                        <option value="<%= CategorySetIdentifier.SeatingType%>">
-                                            座席タイプ
-                                        </option>
-                                        <option value="<%= CategorySetIdentifier.MovieTicketType%>">
-                                            ムビチケ券種区分
-                                        </option>
-                                        <option value="<%= CategorySetIdentifier.AccountType%>">
-                                            口座タイプ
-                                        </option>
+                                        <% }) %>
                                     </select>
                                 </div>
 
@@ -107,7 +84,7 @@ CC-00
                                             <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
                                         </a>
                                     </td>
-                                    <td name="inCodeSet.identifier">$inCodeSet.identifier$</td>
+                                    <td name="categoryCodeSetName">$categoryCodeSetName$</td>
                                     <td name="name.ja">
                                         $name.ja$
                                     </td>
